--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Funy keyboard</title>
     <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="main.css">
-    
+    <link rel="stylesheet" href="main.css">   
 </head>
 <body>
-
-    <script type="text/javascript" src="index.js" ></script>    
+    <script type="text/javascript" src="dist/main.js" ></script>    
 </body>
  
 </html>
